# quick-python-environment-setup

./: .gitignore  AGENTS.md  README.md  REQUIREMENTS.md  pyproject.toml
.qoder/rules/: quick-python-environment-setup.md
docs/superpowers/plans/: 2026-05-15-quick-python-environment-setup.md  2026-05-16-phase-2-conflict-diagnostics-enhancement.md
docs/superpowers/specs/: 2026-05-15-quick-python-environment-setup-design.md  2026-05-16-quick-python-environment-setup-mvp-status.md
examples/: claude_code_prompt.md  codex_prompt.md  generic_agent_prompt.md  qoder_prompt.md
quick_env_setup/: asset_detector.py  cli.py  conda_manager.py  conflict_analyzer.py  dependency_file_parser.py  dependency_installer.py  device_detector.py  env_manager.py  git_handler.py  interactive_prompt.py  logger.py  mirror_manager.py  models.py  orchestrator.py  project_scanner.py  project_type_detector.py  python_version_resolver.py  pytorch_resolver.py  recovery_advisor.py  report_generator.py  run_command_discoverer.py  safety_policy.py  source_resolver.py  system_detector.py  utils.py  validator.py  venv_manager.py
skills/claude-code/: SKILL.md
skills/codex/: SKILL.md
skills/copilot/: instructions.md
skills/generic/: SKILL.md
tests/: test_asset_detector.py  test_bootstrap.py  test_conflict_analyzer.py  test_env_managers.py  test_orchestrator_planning.py  test_project_type_detector.py  test_python_version_resolver.py  test_pytorch_resolver.py  test_recovery_advisor.py  test_report_generator.py  test_source_resolver.py
tests/fixtures/broken_project/: README.md  pyproject.toml
(+17 files in other folders)
