[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "quick-python-environment-setup"
version = "0.1.0"
description = "Minimal bootstrap package for Quick Python Environment Setup."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
quick-env-setup = "quick_env_setup.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["quick_env_setup*"]

